--- a/week4/css/styles.css
+++ b/week4/css/styles.css
@@ -220,7 +220,7 @@ footer{
 }
 #linko, #linko visited{
     text-decoration:none;
-    color:red;
+    color:orange;
 }
 
 .javafoot, #name2, #wdd, .lastmod{
