--- a/week4/css/styles.css
+++ b/week4/css/styles.css
@@ -2,11 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Roboto&display=swap');
 
 h1{
-    font-size:20px;
+    font-size:30px;
     
 }
 h2{
-    font-size:13px;
+    font-size:20px;
+}
+h3{
+    font-size:25px;
 }
 
 body{
@@ -77,7 +80,7 @@ h1,h2{
 }
 p, a, div{
     font-family: 'Roboto', sans-serif;
-    font-size:9px;
+    font-size:10px;
 }
 .links{
     grid-row:1/2;
@@ -134,7 +137,7 @@ nav ul.open{
     display:block;
 }
 .current-date{
-    width:100%;
+    width:94%;
     background-color:#073447;
     grid-row:2/2;
     grid-column:1/5;
@@ -147,14 +150,13 @@ nav ul.open{
     
 }
 .grid-container{
-    width:100%;
-  
+    width:90%;
     margin:auto;
     margin-top:20px;
     margin-bottom:20px;
     display:grid;
     grid-template-columns:1fr;
-    grid-template-rows:1fr 1fr 1fr 1fr;
+    grid-template-rows:0.5fr 0.5fr 0.5fr 0.5fr;
     grid-gap:10px;
     
 }
@@ -214,16 +216,16 @@ nav ul.open{
     grid-row: 4/4;
     padding-left:5px;
     padding-top:5px;
-    
     width:100%;
+   
 }
 .parent{
     background-color: #BCC2C5;
-    grid-row:5/5;
+    
     padding-left:5px;
     padding-top:5px;
-    
     width:100%;
+    align-items:center
 }
 .spot1{
     background-color: #AEAFB0;
@@ -272,7 +274,7 @@ nav ul.open{
 
 .section-header{
     color:#013220;
-    font-size:2em;
+    /*font-size:2em;*/
     text-align:center;
     margin-bottom:15px;
     margin-top:15px;
@@ -289,6 +291,7 @@ nav ul.open{
     margin-top:10px;
 }
 .section-text{
+    
     text-align:center;
     width:100%;
 
@@ -313,11 +316,12 @@ nav ul.open{
     margin:auto;
 }
 #weather-p1{
-    text-align:left;
+    margin-top:20px;
+    text-align:center;
 
 }
 #weather-p2{
-    text-align:left;
+    text-align:center;
 }
 #join-btn2{
     background-color:#0B4F6C;;
@@ -409,13 +413,16 @@ text-align:center;
 
 @media only screen and (min-width:450px){
     h1{
-        font-size:30px;
+        font-size:45px;
     }
     h2{
-        font-size:20px;
+        font-size:45px;
+    }
+    h3{
+        font-size:40px;
     }
     p,a,div{
-        font-size:12px;
+        font-size:15px;
     }
     header{
         padding-bottom:10px;
@@ -476,7 +483,7 @@ text-align:center;
 
 
     #section-header{
-        font-size:3em;
+        /*font-size:3em;*/
     }
 
 
@@ -536,13 +543,16 @@ text-align:center;
 @media only screen and (min-width:864px) {
 
     h1{
-        font-size:35px;
+        font-size:38px;
     }
     h2{
         font-size:24px;
     }
+    h3{
+        font-size:30px;
+    }
     p,a,div{
-        font-size:14px;
+        font-size:16px;
     }
     main{
         height:100%;
@@ -575,7 +585,7 @@ text-align:center;
         width:95%;
         margin-bottom:20px;
         grid-template-columns:0.5fr 1fr 0.5fr;
-        grid-template-rows:0.5fr 0.5fr 0.5fr;
+        grid-template-rows:0.5fr 0.3fr 0.5fr;
     }
     .hero{
         grid-column:2/3;
@@ -611,29 +621,30 @@ text-align:center;
         grid-column:3/4;
         grid-row:1/4;
         display:grid;
-        grid-template-rows:1fr;
+        grid-template-rows:0.5fr 0.5fr;
         grid-template-columns:1fr;
         grid-gap:5px;
         padding-bottom:5px;
+        
         
     }
     .spot1{
         grid-row:1/2;
         grid-column:1/2;
-        height:100%;
+        max-height:400px;
         width:90%;
-        margin:auto;
-        padding:0;
-        padding-left:7px;
+   
+        
+        
     }
     .spot2{
         grid-row:2/3;
         grid-column:1/2;
-        margin:auto;
+        margin-top:0;
         width:90%;
-        padding:0;
-        padding-left:7px;
-        height:100%;
+       
+        
+        
     }
     
     .spot3{
@@ -641,17 +652,15 @@ text-align:center;
         grid-row:3/4;
         grid-column:1/2 ;
         width:90%;
-        margin:auto;
-        padding:0;
-        padding-left:7px;
-        height:100%;
+       
+      
+ 
+        
     }
 
     #section-header{
         font-size:2em;
     }
-
-
 
 
     footer{
