--- a/week4/css/styles.css
+++ b/week4/css/styles.css
@@ -3,7 +3,6 @@
 
 h1{
     font-size:30px;
-    
 }
 h2{
     font-size:20px;
@@ -149,6 +148,9 @@ nav ul.open{
     padding-top:10px;
     
 }
+
+
+/* HOME PAGE ........................................................*/
 .grid-container{
     width:90%;
     margin:auto;
@@ -158,6 +160,8 @@ nav ul.open{
     grid-template-columns:1fr;
     grid-template-rows:0.5fr 0.5fr 0.5fr 0.5fr;
     grid-gap:10px;
+    text-align:center;
+    
     
 }
 .hero{
@@ -275,7 +279,7 @@ nav ul.open{
 .section-header{
     color:#013220;
     /*font-size:2em;*/
-    text-align:center;
+    
     margin-bottom:15px;
     margin-top:15px;
 }
@@ -291,14 +295,12 @@ nav ul.open{
     margin-top:10px;
 }
 .section-text{
-    
-    text-align:center;
     width:100%;
 
 
 }
 .spotlight-head{
-    text-align:center;
+    
 }
 .weather-grid{
     grid-template-columns: 1fr 1fr;
@@ -336,6 +338,62 @@ nav ul.open{
     
 }
 
+/*DISCOVER PAGE................................................*/
+.discover-grid{
+    width:90%;
+    margin:auto;
+    margin-top:20px;
+    margin-bottom:20px;
+    display:grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-gap:10px;
+
+}
+.info-1{
+    background-color: #BCC2C5;
+}
+.discover-pic-1{
+    margin:auto;
+}
+.info-2{
+    background-color: #BCC2C5;
+}
+.discover-pic-2{
+    margin:auto; 
+}
+.info-3{
+    background-color: #BCC2C5;
+}
+.discover-pic-3{
+    margin:auto;
+}
+.info-4{
+    background-color: #BCC2C5;
+}
+.discover-pic-4{
+    margin:auto;
+}
+.info-5{
+    background-color: #BCC2C5;
+}
+.discover-pic-5{
+    margin:auto;
+}
+.discover-pic-6{
+    margin:auto;
+}
+.discover-pic-7{
+    margin:auto;
+}
+.discover-pic-8{
+    margin:auto;
+}
+.discover-pic-9{
+    margin:auto;
+}
+
+/*FOOTER...................................................*/
 footer{
     width:100%;
     height:100%;
@@ -411,15 +469,16 @@ text-align:center;
     padding-bottom:15px;
 }
 
+/*MEDIUM SCREENS........................................................*/
 @media only screen and (min-width:450px){
     h1{
         font-size:45px;
     }
     h2{
-        font-size:45px;
+        font-size:38px;
     }
     h3{
-        font-size:40px;
+        font-size:35px;
     }
     p,a,div{
         font-size:15px;
@@ -428,6 +487,9 @@ text-align:center;
         padding-bottom:10px;
         padding-top:10px;
     }
+
+
+    /*HOME PAGE..............................................*/
     .grid-container{
         width:95%;
         grid-template-columns:1fr 1fr 1fr 1fr ;
@@ -486,9 +548,93 @@ text-align:center;
         /*font-size:3em;*/
     }
 
+/*DISCOVER PAGE..............................................*/
+body{
+    margin:auto;
+}
+.discover-grid{
+    width:95%;
+    margin:auto;
+    margin-top:20px;
+    margin-bottom:20px;
+    display:grid;
+    grid-template-columns: 0.5fr 0.5fr 0.5fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-gap:0;
+    height:auto;
+    
+}
+.info-1{
+    background-color: #BCC2C5;
+    grid-column:1/3;
+    grid-row:1/2;
+    text-align:left;
+    padding-left:10px;
+    
+}
+.discover-pic-1{
+    grid-column:3/4;
+    grid-row:1/2;
 
+}
+.info-2{
+    background-color: #BCC2C5;
+    grid-column:1/3;
+    grid-row:2/3;
+    padding-left:10px;
+}
+.discover-pic-2{
+    grid-column:3/4;
+    grid-row:2/3;
+}
+.info-3{
+    background-color: #BCC2C5;
+    grid-column:1/3;
+    grid-row:3/4;
+    padding-left:10px;
+}
+.discover-pic-3{
+    grid-column:3/4;
+    grid-row:3/4;
+}
+.info-4{
+    background-color: #BCC2C5;
+    grid-column:1/3;
+    grid-row:4/5;
+    padding-left:10px;
+}
+.discover-pic-4{
+    grid-column:3/4;
+    grid-row:4/5;
+}
+.info-5{
+    background-color: #BCC2C5;
+    grid-column:1/3;
+    grid-row:5/6;
+    padding-left:10px;
+}
+.discover-pic-5{
+    grid-column:3/4;
+    grid-row:5/6;
+}
+.discover-pic-6{
+    grid-column:1/2;
+    grid-row:6/7;
+}
+.discover-pic-7{
+    grid-column:2/3;
+    grid-row:6/7;
+}
+.discover-pict-8{
+    grid-column:1/2;
+    grid-row:7/8;
+}
+.discover-pic-9{
+    grid-column:2/3;
+    grid-row:7/8;
+}
 
-
+/*FOOTER....................................................*/
     footer{
         flex-direction:row;
     }
@@ -539,7 +685,7 @@ text-align:center;
 
 
 
-
+/*LARGE SCREEN...............................................................*/
 @media only screen and (min-width:864px) {
 
     h1{
@@ -580,12 +726,13 @@ text-align:center;
         border:none;
     }
 
-
+/*HOME PAGE......................................................*/
     .grid-container{
         width:95%;
         margin-bottom:20px;
         grid-template-columns:0.5fr 1fr 0.5fr;
         grid-template-rows:0.5fr 0.3fr 0.5fr;
+        
     }
     .hero{
         grid-column:2/3;
@@ -661,8 +808,97 @@ text-align:center;
     #section-header{
         font-size:2em;
     }
+/*DISCOVER PAGE............................................*/
 
+.discover-grid{
+    width:95%;
+    margin:auto;
+    margin-top:20px;
+    margin-bottom:20px;
+    display:grid;
+    grid-template-columns: 0.5fr 0.5fr 0.5fr 0.5fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-gap:0;
+    height:auto;
+    
+}
+.info-1{
+    background-color: #BCC2C5;
+    grid-column:1/4;
+    grid-row:1/2;
+    text-align:left;
+    padding-left:10px;
+    
+}
+.discover-pic-1{
+    grid-column:4/5;
+    grid-row:1/2;
+ 
 
+}
+.info-2{
+    background-color: #BCC2C5;
+    grid-column:1/4;
+    grid-row:2/3;
+    padding-left:10px;
+}
+.discover-pic-2{
+    grid-column:4/5;
+    grid-row:2/3;
+
+}
+.info-3{
+    background-color: #BCC2C5;
+    grid-column:1/4;
+    grid-row:3/4;
+    padding-left:10px;
+}
+.discover-pic-3{
+    grid-column:4/5;
+    grid-row:3/4;
+
+}
+.info-4{
+    background-color: #BCC2C5;
+    grid-column:1/4;
+    grid-row:4/5;
+    padding-left:10px;
+}
+.discover-pic-4{
+    grid-column:4/5;
+    grid-row:4/5;
+   
+
+}
+.info-5{
+    background-color: #BCC2C5;
+    grid-column:1/4;
+    grid-row:5/6;
+    padding-left:10px;
+}
+.discover-pic-5{
+    grid-column:4/5;
+    grid-row:5/6;
+   
+}
+.discover-pic-6{
+    grid-column:1/2;
+    grid-row:6/7;
+}
+.discover-pic-7{
+    grid-column:2/3;
+    grid-row:6/7;
+}
+.discover-pic-8{
+    grid-column:3/4;
+    grid-row:6/7;
+}
+.discover-pic-9{
+    grid-column:4/5;
+    grid-row:6/7;
+}
+
+/*FOOTER.................................................*/
     footer{
         justify-self: center;
     }
@@ -693,34 +929,4 @@ text-align:center;
 
 
 
-    /*
-    .navigation {
-        padding:0;
-        display:flex;
-        
-        float:left;
-        margin-right:30px;
-    }
-
-    .navigation li {
-        display:inline;
-        padding:0;
-        margin:0;
-    }
-    .navigation a:link,
-    .navigation a:visited {
-	color:#000;
-	background:#DCC7BE;
-    padding:20px;
-    float:left;
-	width:100%;
-    text-decoration:none;
-    margin:20px;
-    }
-.date{
-    justify-items: left;
-    width:100%;
-
-    }
-*/
 
