--- a/week4/css/styles.css
+++ b/week4/css/styles.css
@@ -14,7 +14,7 @@ h3{
 }
 
 body{
-    width:99%;
+    width:100%;
     height:100%;
     margin:0;
     padding:0;
@@ -91,8 +91,8 @@ strong{
     grid-row:1/2;
     display:flex;
     flex-direction:column;
-    margin-left:1rem;
-    margin-right:1rem;
+    /*margin-left:1rem;
+    margin-right:1rem;*/
 }
 #fb{
     width:25.07px;
@@ -106,14 +106,14 @@ strong{
 nav{
     grid-row:1/2;
     margin-right:10px;
-    margin-left:20px;
+   /* margin-left:20px;*/
 }
 nav button{
 
     background:transparent;
     border:none;
     font-size:2rem;
-    margin-right:10px;
+    /*margin-right:10px;*/
     color:#DCC7BE;
 }
 #navigation{
@@ -142,23 +142,24 @@ nav ul.open{
     display:block;
 }
 .current-date{
-    width:94%;
+    width:100%;
     background-color:#073447;
     grid-row:2/2;
     grid-column:1/5;
-    height:35%;
+    height:30px;
     text-align:center;
     color:white;
     padding:0;
     margin:auto;
     padding-top:10px;
+
     
 }
 
 
 /* HOME PAGE ........................................................*/
 .grid-container{
-    width:90%;
+    width:100%;
     margin:auto;
     margin-top:20px;
     margin-bottom:20px;
@@ -175,7 +176,7 @@ nav ul.open{
     padding-left:5px;
     padding-top:5px;
   
-    background-color: #BCC2C5;
+    background-color: rgba(188, 194, 197, 0.5);;
     position: relative;
    
 }
@@ -190,7 +191,7 @@ nav ul.open{
 	opacity:0.9;
 }
 #join-btn{
-    background-color:#0B4F6C;;
+    background-color:#0B4F6C;
     color:white;
     position:absolute;
     bottom:30px;
@@ -198,14 +199,14 @@ nav ul.open{
     padding:20px;
     border:none;
     border-radius:20px;
-    box-shadow: 0px 8px 15px black;
+    /*box-shadow: 0px 8px 15px black;*/
 }
 #hero-img{
     width:99%;
     
 }
 .event{
-    background-color: #BCC2C5;
+    background-color: rgba(188, 194, 197, 0.5);;
     grid-row: 2/2;
     padding-left:5px;
     padding-top:5px;
@@ -214,7 +215,7 @@ nav ul.open{
     
 }
 .weather{
-    background-color: #BCC2C5;
+    background-color:rgba(188, 194, 197, 0.5);
     grid-row: 3/3;
     padding-left:5px;
     padding-top:5px;
@@ -222,7 +223,7 @@ nav ul.open{
     width:100%;
 }
 .news{
-    background-color: #BCC2C5;
+    background-color:rgba(188, 194, 197, 0.5);
     grid-row: 4/4;
     padding-left:5px;
     padding-top:5px;
@@ -230,7 +231,7 @@ nav ul.open{
    
 }
 .parent{
-    background-color: #BCC2C5;
+    background-color: rgba(188, 194, 197, 0.5);
     
     padding-left:5px;
     padding-top:5px;
@@ -238,7 +239,7 @@ nav ul.open{
     align-items:center
 }
 .spot1{
-    background-color: #AEAFB0;
+    background-color: rgba(174, 175, 176, 0.4);
     width:95%;
     margin:auto;
     margin-top:10px;
@@ -251,7 +252,7 @@ nav ul.open{
 
 }
 .spot2{
-    background-color: #AEAFB0;
+    background-color: rgba(174, 175, 176, 0.4);
     width:95%;
     margin:auto;
     margin-top:10px;
@@ -263,7 +264,7 @@ nav ul.open{
     
 }
 .spot3{
-    background-color: #AEAFB0;
+    background-color: rgba(174, 175, 176, 0.4);
     width:95%;
     margin:auto;
     margin-bottom:10px;
@@ -278,7 +279,7 @@ nav ul.open{
     padding-left:5px;
     padding-top:5px;
     height:100%;
-    background-color: #BCC2C5;
+    background-color: rgba(188, 194, 197, 0.5);;
 
 }
 
@@ -329,12 +330,12 @@ nav ul.open{
     text-align:center;
 }
 #join-btn2{
-    background-color:#0B4F6C;;
+    background-color:#0B4F6C;
     color:white;
     padding:20px;
     border:none;
     border-radius:20px;
-    box-shadow: 0px 8px 15px black;
+    /*box-shadow: 0px 8px 15px black;*/
     display:block;
     margin:auto;
     margin-top:30px;
@@ -358,35 +359,35 @@ nav ul.open{
     border: 10px solid #0B4F6C;
 }
 .info-1{
-    background-color: #BCC2C5;
+    background-color: rgba(188, 194, 197, 0.5);;
     padding-left:10px;
 }
 .discover-pic-1{
     margin:auto;
 }
 .info-2{
-    background-color: #BCC2C5;
+    background-color: rgba(188, 194, 197, 0.5);;
     padding-left:10px;
 }
 .discover-pic-2{
     margin:auto; 
 }
 .info-3{
-    background-color: #BCC2C5;
+    background-color: rgba(188, 194, 197, 0.5);;
     padding-left:10px;
 }
 .discover-pic-3{
     margin:auto;
 }
 .info-4{
-    background-color: #BCC2C5;
+    background-color: rgba(188, 194, 197, 0.5);;
     padding-left:10px;
 }
 .discover-pic-4{
     margin:auto;
 }
 .info-5{
-    background-color: #BCC2C5;
+    background-color: rgba(188, 194, 197, 0.5);;
     padding-left:10px;
 }
 .discover-pic-5{
@@ -410,7 +411,7 @@ nav ul.open{
 }
 /*JOIN PAGE...................................................*/
 /*main{
-    background-color:#BCC2C5;
+    background-color:rgba(188, 194, 197, 0.5);;
 }*/
 form fieldset{
     margin:2rem 0;
@@ -419,7 +420,7 @@ form fieldset{
 }
 form legend{
     color: #073447;
-    margin: 1rem;
+    /*margin: 1rem;*/
     padding: 0.5rem;
     font-size:1rem;
 }
@@ -470,7 +471,7 @@ form label.sbs{
     display:grid;  
     grid-template-columns: 1fr;
     grid-template-rows: 0.5fr 1fr;
-    background-color:#BCC2C5;
+    background-color:rgba(188, 194, 197, 0.5);;
     padding-left:10px;
     padding-bottom:10px;
 }
@@ -483,7 +484,7 @@ form label.sbs{
 
 /*THANK YOU..........................................*/
 .small-body{
-    background-color:#BCC2C5;
+    background-color:rgba(188, 194, 197, 0.5);;
     width:90%;
     margin:auto;
     margin-top:20px;
@@ -500,7 +501,7 @@ form label.sbs{
     margin:auto;
     margin-top:20px;
     margin-bottom:20px;
-    background-color:#BCC2C5;
+    background-color:rgba(188, 194, 197, 0.5);;
     padding-bottom:10px;
 }
 
@@ -557,7 +558,7 @@ margin:5px;
     padding:15px;
     border:none;
     border-radius:20px;
-    box-shadow: 0px 8px 15px black;
+    /*box-shadow: 0px 8px 15px black;*/
     margin:10px;
     margin-left:25px;
     margin-bottom:40px;
@@ -568,7 +569,7 @@ margin:5px;
     padding:15px;
     border:none;
     border-radius:20px;
-    box-shadow: 0px 8px 15px black;
+    /*box-shadow: 0px 8px 15px black;*/
     margin:10px;
     margin-bottom:40px;
 }
@@ -578,7 +579,21 @@ margin:5px;
     padding-top:10px;
     margin-bottom:15px;
 }
-
+/*CONTACT....................................................*/
+.contact-container{
+    background-color:rgba(188, 194, 197, 0.5);;
+    width:90%;
+    margin:auto;
+    margin-top:20px;
+    margin-bottom:20px;
+    padding-left:10px;
+    padding-bottom:10px;
+    padding-top:8px;
+    height:100%;
+}
+#story2{
+    margin-top:25px;
+}
 
 /*FOOTER...................................................*/
 footer{
@@ -592,6 +607,7 @@ footer{
     display:grid;
     grid-template-columns:1fr;
     grid-template-rows:0.8fr 0.5fr 1fr;
+    width:100%;
 }
 
 .footings1{
@@ -762,7 +778,7 @@ body{
     opacity: .8;
 }
 .info-1{
-    background-color: #BCC2C5;
+    background-color: rgba(188, 194, 197, 0.5);;
     grid-column:1/3;
     grid-row:1/2;
     text-align:left;
@@ -775,7 +791,7 @@ body{
 
 }
 .info-2{
-    background-color: #BCC2C5;
+    background-color: rgba(188, 194, 197, 0.5);;
     grid-column:1/3;
     grid-row:2/3;
     padding-left:10px;
@@ -785,7 +801,7 @@ body{
     grid-row:2/3;
 }
 .info-3{
-    background-color: #BCC2C5;
+    background-color: rgba(188, 194, 197, 0.5);;
     grid-column:1/3;
     grid-row:3/4;
     padding-left:10px;
@@ -795,7 +811,7 @@ body{
     grid-row:3/4;
 }
 .info-4{
-    background-color: #BCC2C5;
+    background-color: rgba(188, 194, 197, 0.5);;
     grid-column:1/3;
     grid-row:4/5;
     padding-left:10px;
@@ -805,7 +821,7 @@ body{
     grid-row:4/5;
 }
 .info-5{
-    background-color: #BCC2C5;
+    background-color: rgba(188, 194, 197, 0.5);;
     grid-column:1/3;
     grid-row:5/6;
     padding-left:10px;
@@ -885,7 +901,7 @@ body{
         grid-row:2/3;
         grid-column:1/4;
         justify-content: center;
-        margin-top:20px;
+        margin-top:30px;
     }
     #last{
         grid-row:3/4;
@@ -1044,7 +1060,7 @@ body{
     width:225px;
 }
 .info-1{
-    background-color: #BCC2C5;
+    background-color: rgba(188, 194, 197, 0.5);;
     grid-column:1/4;
     grid-row:1/2;
     text-align:left;
@@ -1058,7 +1074,7 @@ body{
 }
 
 .info-2{
-    background-color: #BCC2C5;
+    background-color: rgba(188, 194, 197, 0.5);;
     grid-column:1/4;
     grid-row:2/3;
     padding-left:10px;
@@ -1069,7 +1085,7 @@ body{
 
 }
 .info-3{
-    background-color: #BCC2C5;
+    background-color: rgba(188, 194, 197, 0.5);;
     grid-column:1/4;
     grid-row:3/4;
     padding-left:10px;
@@ -1080,7 +1096,7 @@ body{
 
 }
 .info-4{
-    background-color: #BCC2C5;
+    background-color: rgba(188, 194, 197, 0.5);;
     grid-column:1/4;
     grid-row:4/5;
     padding-left:10px;
@@ -1092,7 +1108,7 @@ body{
 
 }
 .info-5{
-    background-color: #BCC2C5;
+    background-color: rgba(188, 194, 197, 0.5);;
     grid-column:1/4;
     grid-row:5/6;
     padding-left:10px;
