--- a/week4/css/styles.css
+++ b/week4/css/styles.css
@@ -648,7 +648,7 @@ footer{
 #name, #number{
     margin:5px;
 }
-#linko, #linko visited{
+.linko, .linko visited{
     text-decoration:none;
     color:orange;
 }
