--- a/finalproject/css/large.css
+++ b/finalproject/css/large.css
@@ -5,8 +5,8 @@
 
 .main-sec-5{
     display:grid;
-    grid-template-rows: .1fr .1fr 1fr;
-    grid-template-columns:1fr 1fr;
+    grid-template-rows: .1fr .1fr;
+    grid-template-columns:1fr;
     margin-bottom:30px;
 } 
 .table-header{
@@ -15,8 +15,7 @@
 }  
 .generated-table{
     display:table;
-    grid-column:1/3;
-    grid-row:2/3;
+
     margin-bottom:20px;
 }
 .generated-table2{
@@ -34,21 +33,30 @@ td{
 }
 .table-img{
     grid-column:1/2;
-    grid-row:3/4;
+    grid-row:6/7;
 }
 .table-img2{
     grid-column:2/3;
-    grid-row:3/4;
+    grid-row:6/7;
 }
 
 .services-main{
 grid-template-columns:1fr 1fr 1fr;
+border-width:1px 1px 1px 1px;
 }
 .service-1{
     grid-column:1/4;
 }
 .service-8{
     grid-column:1/4;
+}
+.service-img{
+    max-width:60%;
+    min-width:60%;
+}
+#service-btn{
+    margin-top:80px;
+    margin-bottom:30px;
 }
 
 /*RESERVATIONS.....................................*/
@@ -67,4 +75,10 @@ grid-template-columns:1fr 1fr 1fr;
     grid-template-columns:1fr 1fr 1fr;
 }
 
+}
+
+
+/*FOOTER..............................................*/
+#footer-map{
+    width:80%;
 }
