--- a/finalproject/css/medium.css
+++ b/finalproject/css/medium.css
@@ -4,7 +4,13 @@
 p{
     font-family: 'Kantumruy Pro', sans-serif;
     margin:.8em;
-    font-size:1em;
+    font-size:18px;
+}
+h2{
+    font-size:38px;
+}
+h3{
+    font-size:25px;
 }
 
     
@@ -43,6 +49,10 @@ nav ul {
     grid-template-columns:.5fr .8fr .8fr .8fr ;
     grid-template-rows:1fr;
 }
+.main-java{
+    grid-column: 1/3;
+    grid-row:2/3;
+ }
 #main-sec-grid-1{
     grid-column:1/2;
     grid-row:1/2;
@@ -61,7 +71,7 @@ nav ul {
 }
 .main-sec-2{
     grid-column:1/3;
-    grid-row:2/3;
+    grid-row:3/4;
     margin-bottom:30px;
 }
 .main-sec-3{
@@ -71,7 +81,7 @@ nav ul {
     margin-bottom:20px;
    /* margin-left:113px;*/
    grid-column:1/2;
-   grid-row:3/4;
+   grid-row:4/5;
    align-items:center;
    margin:auto;
 }
@@ -85,16 +95,16 @@ nav ul {
     width:20%;
     min-width:250px;
     grid-column:2/3;
-    grid-row:3/4;
+    grid-row:4/5;
 }
 .main-sec-5{
     margin:auto;
     grid-column:1/3;
-    grid-row:4/5;
+    grid-row:5/6;
     margin-bottom:10px;
     margin-top:15px;
     grid-template-columns:1fr 1fr;
-    grid-template-rows:.1fr .5fr 1fr;
+    grid-template-rows:.1fr .5fr;
 }
 .table-header{
     grid-column:1/3;
@@ -117,27 +127,62 @@ th{
 td{
     font-size:20px;
 }
+/*.images-at-end{
+    /*display:flex;
+    flex-direction:row;/*
+    margin:auto;
+    width:100%;
+    grid-column:1/3;
+    */
+
 .table-img{
+    margin:auto;
     grid-column:1/2;
-    grid-row:3/4;
+    grid-row:6/7;
 }
 .table-img2{
+    margin:auto;
     grid-column:2/3;
-    grid-row:3/4;
+    grid-row:6/7;
 }
+
+
 
 /*SERVICES................................*/
 .services-main{
     grid-template-columns: 1fr 1fr;
     flex-direction:column;
+    width:80%;
+    border-width:.5px .5px .5px .5px;
 }
 .service-1{
-    grid-column:1/3;
+    width:80%;
+    margin:auto;
+    margin-top:60px;
+    margin-bottom:20px;
 }
 .service-8{
     grid-column:1/3;
 }
-
+.service-img{
+    max-width:90%;
+    min-width:85%;
+    margin-left:16px;
+}
+/*RESERVATION................................*/
+.reserve-form{
+    width:80%;
+    border-width:.5px .5px .5px .5px;
+}
+form legend{
+    font-size:25px;
+}
+form label.top, form div{
+    font-size:18px;
+}
+form label.sbs{
+    font-size:18px;
+}
 
 /*GALLERY..................................*/
 
@@ -165,6 +210,7 @@ td{
     padding-bottom:30px;
     height:100%;
     align-items:flex-start;
+    
 }
 .footer-part-1{
     grid-column:1/2;
@@ -190,13 +236,16 @@ td{
     font-size:15px;
 }
 .footer-text{
-    font-size:12px;
+    font-size:14px;
 }
 .footer-link{
     font-size:12px;
 }
 .footer-link2{
     font-size:12px;
+}
+#footer-map{
+    width:95%;
 }
 }
 
