--- a/finalproject/css/small.css
+++ b/finalproject/css/small.css
@@ -7,13 +7,38 @@ body{
     padding:0;
 }
 
-p, h2, strong{
+p, strong{
     font-family: 'Kantumruy Pro', sans-serif;
-    margin:1em;
+    margin:5px;
+    padding:5px;
+    font-size:16px;
+    
+}
+p{
+    /*opacity: 0.9;*/
+}
+p, h2, h3, strong {
+    margin-left:12px;
     padding:5px;
 }
+.javamainpage{
+    text-align:center;
+    padding:10px; 
+    font-family: 'Kantumruy Pro', sans-serif;
+    border-style:solid;
+    
+}
 h2{
-    font-size:18px;  
+    font-family:'Red Hat Text', sans-serif;
+    font-size:30px;
+}
+h3{
+    font-family:'Red Hat Text', sans-serif;
+    font-size:19px;
+    font-weight:bold;
+    margin-top:30px;
+    margin-bottom:15px;
+    color:#800000;
 }
 header{
     width:100%;
@@ -24,7 +49,15 @@ header{
     margin:auto;
     display: flex;
 	justify-content:center;
+    position: fixed;
+    position: -webkit-sticky;
+    top: 0;
 }
+header.cbp-af-header-shrink{
+    padding: 10px 0;
+}
+
+
 .header-grid{
     width:100%;
     height:100%;
@@ -87,6 +120,8 @@ nav ul li a:hover{
 }
 .homepage{
     display:grid;
+    grid-gap:10px;
+    grid-template-columns:1fr;
     grid-template-rows:auto;
 }
 .main-img{
@@ -97,19 +132,34 @@ nav ul li a:hover{
     max-width:100%;
     max-height:100%;
     margin:auto;
+    margin-top:80px;
 }
-
 .main-sec-1{
+    grid-column:1/2;
+    grid-row:1/2;
     display:grid;
     width:100%;
     background:white;
-    grid-template-columns:1fr 1fr;
-    grid-template-rows:.5fr .5fr;
-    margin-top:50px;
-    margin-bottom:85px;
+    grid-template-columns:50% 50%;
+    grid-template-rows:50% 50%;
+    margin-top:40px;
+    margin-bottom:40px;
     align-items:center;
     min-height:210px;
+    text-align:center;
 }
+.main-java{
+    grid-column:1/2;
+    grid-row:2/3;
+   background-color:black;
+   color:white;
+   max-width:70%;
+   width: 50%;
+   margin:auto;
+ 
+   padding:10px;
+}
+
 #main-sec-grid-1{
     width:100px;
     height:200px;
@@ -141,6 +191,8 @@ nav ul li a:hover{
 }
 
 .main-sec-2{
+    grid-column:1/2;
+    grid-row:3/4;
     width:70%;
     margin:auto;
     margin-bottom:20px;
@@ -149,7 +201,8 @@ nav ul li a:hover{
 }
 
 .main-sec-3{
-    background-color:lightgray; 
+    grid-column:1/2;
+    grid-row:4/5;
     width:95%;
     margin:auto; 
     margin-bottom:20px;
@@ -168,6 +221,8 @@ nav ul li a:hover{
 }
 
 .main-sec-4{
+    grid-column:1/2;
+    grid-row:5/6;
     background-color:lightgray; 
     width:70%;
     margin:auto; 
@@ -181,6 +236,8 @@ nav ul li a:hover{
     margin:auto;
 }
 .main-sec-5{
+    grid-column:1/2;
+    grid-row:6/7;
     width:70%;
     margin:auto;
     margin-bottom:20px;
@@ -188,7 +245,7 @@ nav ul li a:hover{
     padding:10px;
     display:grid;
     grid-template-columns:1fr 1fr;
-    grid-template-rows:.1fr 1fr 1fr 1fr;
+    grid-template-rows:.1fr 1fr;
 }
 .table-header{
     grid-column:1/3;
@@ -239,16 +296,20 @@ th{
 }
 .table-img{
     grid-column:1/2;
-    grid-row:3/4;
-    width:250px;
+    grid-row:7/8;
+    width:100%;
     margin:auto;
 }
 .table-img2{
     grid-column:1/2;
-    grid-row:4/5;
-    width:250px;
+    grid-row:8/9;
+    width:100%;
     margin:auto;
 }
+/*.images-at-end{
+    width:100%;
+    margin:auto;
+}*/
 
 
 
@@ -257,26 +318,113 @@ th{
     width:70%;
     margin:auto;
     margin-bottom:20px;
-    background-color:lightgray;
-    padding:10px;
+    padding-bottom:20px;
     display:grid;
     grid-template-columns:1fr;
+    border-style: solid;
+    border-width:.1px .1px .1px .1px;
+    padding:15px;
 }
-
+.service-1{
+    background-color:#121212;
+    color:white;
+    padding:15px;
+    text-align:center;
+    width:70%;
+    margin:auto;
+    margin-top:50px;
+    margin-bottom:20px;
+}
+.service-img{
+    max-width:100%;
+    min-width:100%;
+    margin-top:10px;
+    margin-bottom:20px;
+    border:solid;
+    border-width:4px;
+    border-color:#800000;
+}
+#service-btn{
+    margin:auto;
+    display:block;
+    background-color:#c10005;
+    border:none;
+    padding:25px;
+    font-size:16px;
+    color:white;
+    border-radius:15px;
+    font-family:'Red Hat Text', sans-serif;
+    margin-top:20px;
+    
+}
 /*RESERVATIONS.....................................*/
 .reserve-form{
     width:70%;
     margin:auto;
     margin-bottom:20px;
-    background-color:lightgray;
-    padding:10px;
+    padding:15px;
+    border-style: solid;
+    border-width:.1px .1px .1px .1px;
 }
+
+
+form fieldset{
+    margin:2rem 0;
+    padding: .6rem;
+    border:none;
+}
+form legend{
+    padding: 0.5rem;
+    font-family:'Red Hat Text', sans-serif;
+    font-size:19px;
+    font-weight:bold;
+    color:#800000;
+   
+}
+form label.top, form div{
+    display:block;
+    padding-top:1rem;
+    color: black;
+    font-size:16px;
+    font-family: 'Kantumruy Pro', sans-serif;
+}
+form label.top input, form label.top select, textarea{
+    -webkit-appearance: none;
+    display:block;
+    font-size:1rem;
+    border:solid 1px black;
+    border-radius:4px;
+    padding:.75rem;
+    color: black;
+    width:90%;
+    max-width: 20rem;
+    background-color:#FAF9F6;
+}
+form label.sbs{
+    font-family: 'Kantumruy Pro', sans-serif;
+    font-size:16px;
+    display:block;
+    padding:.75rem 0;
+    
+}
+
+
 .thankyou{
     width:70%;
     margin:auto;
     margin-bottom:20px;
     background-color:lightgray;
     padding:10px;
+}
+.thankusection{
+    width:70%;
+    margin:auto;
+    margin-bottom:20px;
+    padding:15px;
+}
+#thanku{
+    width:100%;
+    margin:auto;
 }
 /*GALLERY......................................................*/
 .gallery{
@@ -305,15 +453,33 @@ th{
     grid-template-columns:1fr;
 }
 
+/*CONTACT PAGE..............................................*/
+.contact-form{
+    width:70%;
+    margin:auto;
+    margin-bottom:20px;
+    background-color:lightgray;
+    padding:10px;
+}
+
+/*FAQ PAGE...........................................................*/
+.faq-main{
+    width:70%;
+    margin:auto;
+    margin-bottom:20px;
+    background-color:lightgray;
+    padding:10px;
+}
+
 /*FOOTER.......................................................*/
 footer{
     background:black;
     color:white;
 }
 .footer-grid{
-    padding-top:30px;
+    padding-top:50px;
     display:grid;
-    grid-template-rows:1fr .5fr 1fr;
+    grid-template-rows:.5fr .5fr 1fr;
 }
 .footer-part-1{
     text-align:center;
@@ -349,7 +515,6 @@ footer{
     /*margin:auto;*/
     flex-direction:column;
     
-    
 }
 #footer-map{
     width:125px;
@@ -360,4 +525,6 @@ footer{
 .footer-part-3{
     text-align:center;
     grid-row:3/4;
+    padding-top:20px;
+    
 }
