--- a/finalproject/css/large.css
+++ b/finalproject/css/large.css
@@ -2,6 +2,30 @@
 
 
 
+.main-sec-1{
+    grid-template-columns:.4fr 1fr 1fr .4fr;
+    grid-template-rows:auto;
+}
+#main-sec-grid-1{
+    grid-column:1/2;
+    grid-row:1/2;
+}
+#main-sec-grid-2{
+    grid-column:2/3;
+    grid-row:1/2;
+}
+#main-sec-grid-3{
+    grid-column:3/4;
+    grid-row:1/2;
+}
+#main-sec-grid-4{
+    grid-column:4/5;
+    grid-row:1/2;
+}
+
+#main-sec-grid-3, #main-sec-grid-2{
+    font-size:30px;
+}
 
 .main-sec-5{
     display:grid;
@@ -60,8 +84,13 @@ border-width:1px 1px 1px 1px;
 }
 
 /*RESERVATIONS.....................................*/
-
+.reserve-main{
+    border-width:1px 1px 1px 1px;
+}
 /*GALLERY..............................................*/
+.gallery{
+    border-width:1px 1px 1px 1px;
+}
 .gallery-image{
     transition: transform .2s;
 }
@@ -77,8 +106,32 @@ border-width:1px 1px 1px 1px;
 
 }
 
+/*CONTACT............................................*/
+.contact-form{
+    border-width:1px 1px 1px 1px;
+}
+.field-area{
+    grid-column:1/2;
+    grid-row:1/2;
+}
+
+/*FAQ...................................................*/
+.faq-main{
+    border-width:1px 1px 1px 1px;
+}
+
+/*REV.................................................*/
+.rev-main{
+    border-width:1px 1px 1px 1px;
+}
 
 /*FOOTER..............................................*/
 #footer-map{
     width:80%;
+}
+.footer-link-1{
+    padding:20px;
+}
+.footer-link2{
+    padding:20px; 
 }
