--- a/finalproject/css/medium.css
+++ b/finalproject/css/medium.css
@@ -46,16 +46,20 @@ nav ul {
 .main-sec-1{
     grid-column:1/3;
     grid-row:1/2;
-    grid-template-columns:.5fr .8fr .8fr .8fr ;
-    grid-template-rows:1fr;
+    grid-template-columns:.3fr .8fr .8fr;
+    grid-template-rows:1fr .3fr;
 }
 .main-java{
     grid-column: 1/3;
     grid-row:2/3;
+    margin-bottom:50px;
  }
 #main-sec-grid-1{
     grid-column:1/2;
     grid-row:1/2;
+}
+#main-sec-grid-3, #main-sec-grid-2{
+    font-size:25px;
 }
 #main-sec-grid-2{
     grid-column:2/3;
@@ -66,24 +70,26 @@ nav ul {
     grid-row:1/2;
 }
 #main-sec-grid-4{
-    grid-column:4/5;
-    grid-row:1/2;
+    grid-column:1/4;
+    grid-row:2/3;
+    margin:auto;
 }
 .main-sec-2{
     grid-column:1/3;
     grid-row:3/4;
-    margin-bottom:30px;
+    
 }
 .main-sec-3{
     width:20%;
     min-width:300px;
-    min-height:250px;
-    margin-bottom:20px;
+    min-height:200px;
+   margin-top:50px;
    /* margin-left:113px;*/
    grid-column:1/2;
    grid-row:4/5;
    align-items:center;
    margin:auto;
+   margin-top:40px;
 }
 .social-media-links{
     max-width:50px;
@@ -96,13 +102,15 @@ nav ul {
     min-width:250px;
     grid-column:2/3;
     grid-row:4/5;
+    margin-top:40px;
+    
 }
 .main-sec-5{
     margin:auto;
     grid-column:1/3;
     grid-row:5/6;
-    margin-bottom:10px;
-    margin-top:15px;
+    margin-top:50px;
+    padding-bottom:20px;
     grid-template-columns:1fr 1fr;
     grid-template-rows:.1fr .5fr;
 }
@@ -139,11 +147,13 @@ td{
     margin:auto;
     grid-column:1/2;
     grid-row:6/7;
+    padding-top:30px;
 }
 .table-img2{
     margin:auto;
     grid-column:2/3;
     grid-row:6/7;
+    padding-top:30px;
 }
 
 
@@ -186,6 +196,10 @@ form label.sbs{
 
 /*GALLERY..................................*/
 
+.gallery{
+    width:80%;
+    border-width:.5px .5px .5px .5px;
+}
 .gallery-image{
     max-width:80%;
 }
@@ -198,6 +212,22 @@ form label.sbs{
     grid-template-columns:1fr 1fr;
 }
 
+/*CONTACT..................................*/
+.contact-form{
+    width:80%;
+    border-width:.5px .5px .5px .5px;
+}
+
+/*FAQ...........................................*/
+.faq-main{
+    width:80%;
+    border-width:.5px .5px .5px .5px;
+}
+/*REV..........................................................*/
+.rev-main{
+    width:80%;
+    border-width:.5px .5px .5px .5px;
+}
 
 
 
@@ -226,15 +256,18 @@ form label.sbs{
     grid-column:3/4;
     grid-row:1/2;
 }
+.footer-link-1{
+    padding:15px;
+}
 .footer-link2{
-    margin-top:50px;
+    padding:15px; 
 }
 .footer-h2{
     margin-top:0;
+    margin-left:0;
+    font-size:20px;
 }
-.footer-h2{
-    font-size:15px;
-}
+
 .footer-text{
     font-size:14px;
 }
