--- a/finalproject/css/small.css
+++ b/finalproject/css/small.css
@@ -156,7 +156,7 @@ nav ul li a:hover{
    max-width:70%;
    width: 50%;
    margin:auto;
- 
+   margin-top:50px;
    padding:10px;
 }
 
@@ -195,7 +195,7 @@ nav ul li a:hover{
     grid-row:3/4;
     width:70%;
     margin:auto;
-    margin-bottom:20px;
+    margin-top:50px;
     background-color:lightgray;
     padding:10px;
 }
@@ -205,7 +205,7 @@ nav ul li a:hover{
     grid-row:4/5;
     width:95%;
     margin:auto; 
-    margin-bottom:20px;
+    margin-top:50px;
     padding:10px;
     display:grid;
     grid-template-columns:1fr 1fr 1fr;
@@ -226,7 +226,7 @@ nav ul li a:hover{
     background-color:lightgray; 
     width:70%;
     margin:auto; 
-    margin-bottom:20px;
+    margin-top: 50px;
     padding:10px;
 
 }
@@ -240,7 +240,7 @@ nav ul li a:hover{
     grid-row:6/7;
     width:70%;
     margin:auto;
-    margin-bottom:20px;
+    margin-top: 50px;
     background-color:lightgray;
     padding:10px;
     display:grid;
@@ -295,6 +295,7 @@ th{
     min-width:90px;
 }
 .table-img{
+    padding-top:50px;
     grid-column:1/2;
     grid-row:7/8;
     width:100%;
@@ -431,8 +432,9 @@ form label.sbs{
     width:70%;
     margin:auto;
     margin-bottom:20px;
-    background-color:lightgray;
-    padding:10px;
+    padding:15px;
+    border-style: solid;
+    border-width:.1px .1px .1px .1px;
 }
 .gallery-image{
     max-width:100%;
@@ -458,17 +460,39 @@ form label.sbs{
     width:70%;
     margin:auto;
     margin-bottom:20px;
-    background-color:lightgray;
-    padding:10px;
+    padding:15px;
+    border-style: solid;
+    border-width:.1px .1px .1px .1px;
 }
+.field-area{
+    grid-column:1/2;
+    grid-row:1/2;
+}
+
+
 
 /*FAQ PAGE...........................................................*/
 .faq-main{
     width:70%;
     margin:auto;
     margin-bottom:20px;
-    background-color:lightgray;
-    padding:10px;
+    padding:15px;
+    border-style: solid;
+    border-width:.1px .1px .1px .1px;
+}
+
+/*REV..........................................................*/
+.rev-main{
+    width:70%;
+    margin:auto;
+    margin-bottom:20px;
+    padding:15px;
+    border-style: solid;
+    border-width:.1px .1px .1px .1px;
+}
+.rev-img{
+    margin:auto;
+    max-width:235px;
 }
 
 /*FOOTER.......................................................*/
@@ -487,22 +511,30 @@ footer{
     padding-bottom:20px;
 }
 .footer-link{
-    font-family:'Red Hat Text', sans-serif;
-    color:#c10005;
-    text-decoration: none;
-    border-style:solid;
-    padding:5px;
     margin:auto;
+    background-color:#c10005;
+    border:none;
+    padding:20px;
+    font-size:10px;
+    color:white;
+    border-radius:15px;
+    font-family:'Red Hat Text', sans-serif;
 }
 .footer-link2{
+    margin:auto;
+    background-color:#c10005;
+    border:none;
+    padding:20px;
+    font-size:10px;
+    color:white;
+    border-radius:15px;
     font-family:'Red Hat Text', sans-serif;
-    color:#c10005;
-    text-decoration: none;
-    border-style:solid;
-    padding:5px;
+    margin-top:16px;
 }
 .footer-text{
     font-family:'Red Hat Text', sans-serif;
+    
+    line-height: 1.5;
 }
 .footer-h2{
     font-family:'Red Hat Text', sans-serif;
