--- a/finalproject/css/medium.css
+++ b/finalproject/css/medium.css
@@ -13,14 +13,19 @@ h3{
     font-size:25px;
 }
 
-    
+ #header-logo{
+    width:140px;
+    margin-top:0;
+ }   
 #nav-btn{
     display:none;
 }
 nav ul#navbar{
-    display:flex;
-    justify-content:flex-end;
-    margin-right:10px;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+    margin-left:5em;
+    margin-right:1em;
     
 }
 nav ul li a{
@@ -32,19 +37,19 @@ nav ul li a{
 }
 nav li{
     text-align:center;
-    width:100%;
-    font-size:15px;
+    font-size:18px;
 }
 nav ul {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .homepage{
     grid-template-rows:auto;
     grid-template-columns:1fr 1fr;
 }
 .main-sec-1{
-    grid-column:1/3;
+   grid-column:1/3;
     grid-row:1/2;
     grid-template-columns:.3fr .8fr .8fr;
     grid-template-rows:1fr .3fr;
@@ -57,6 +62,7 @@ nav ul {
 #main-sec-grid-1{
     grid-column:1/2;
     grid-row:1/2;
+    max-width:150px;
 }
 #main-sec-grid-3, #main-sec-grid-2{
     font-size:25px;
@@ -241,6 +247,9 @@ form label.sbs{
     height:100%;
     align-items:flex-start;
     
+}
+#footer-logo{
+    width:250px;
 }
 .footer-part-1{
     grid-column:1/2;
