--- a/finalproject/css/small.css
+++ b/finalproject/css/small.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kantumruy+Pro&family=Red+Hat+Text&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kantumruy+Pro&family=PT+Serif&family=Red+Hat+Text&display=swap');
 
 body{
     width:100%;
@@ -31,6 +31,7 @@ p, h2, h3, strong {
 h2{
     font-family:'Red Hat Text', sans-serif;
     font-size:30px;
+    letter-spacing:1px;
 }
 h3{
     font-family:'Red Hat Text', sans-serif;
@@ -48,6 +49,7 @@ header{
     color:white;
     margin:auto;
     display: flex;
+    flex-direction:row;
 	justify-content:center;
     position: fixed;
     position: -webkit-sticky;
@@ -67,9 +69,10 @@ header.cbp-af-header-shrink{
 	justify-content: center;
 }
 #header-logo{
-    width:50px;
+    width:125px;
     grid-column:1/2;
-    margin-right:10px;
+    margin-top:5px;
+    margin-left:10px;
 }
 nav{
     grid-column:2/2;
@@ -92,7 +95,7 @@ nav ul li a{
 nav li{
     background-color:black;
     margin:10px;
-    width:125px;
+    
     float:right;
     font-family:'Red Hat Text', sans-serif;
     font-size:18px;
@@ -107,6 +110,7 @@ nav button{
     margin-left:5em;
     margin-bottom:2rem;
     float:right;
+    margin-right:20px;
 }
 nav ul{
     display:none;
@@ -115,8 +119,8 @@ nav ul.open{
     display:block;
 }
 nav ul li a:hover{
-    background-color:#DCC7BE;
-    color:black;
+    /*background-color:#c10005;*/
+    color:#c10005;
 }
 .homepage{
     display:grid;
@@ -161,8 +165,7 @@ nav ul li a:hover{
 }
 
 #main-sec-grid-1{
-    width:100px;
-    height:200px;
+    max-width:125px;
     margin:auto;
     grid-column:1/2;
     grid-row:1/2;
@@ -347,7 +350,6 @@ th{
 }
 #service-btn{
     margin:auto;
-    display:block;
     background-color:#c10005;
     border:none;
     padding:25px;
@@ -489,10 +491,36 @@ form label.sbs{
     padding:15px;
     border-style: solid;
     border-width:.1px .1px .1px .1px;
+    display:block;
 }
 .rev-img{
+    max-width:200px;
+    align-items: center;
+	justify-content: center;
+    margin-left:17px;
+    padding-bottom: 19px;
+}
+.rev-1{
+    width:90%;
+    background-color:#680000;
+    padding-bottom:5px;
+    padding-top:1px;
     margin:auto;
-    max-width:235px;
+    margin-bottom:4em;
+    color:white;
+
+}
+.rev-1 h3{
+    color:white;
+    letter-spacing:1px;
+}
+.rev-1 hr{
+    width:85%;
+    margin-left:17px;
+    height: 1px;
+    background-color: black;
+    border: none;
+    
 }
 
 /*FOOTER.......................................................*/
@@ -530,6 +558,9 @@ footer{
     border-radius:15px;
     font-family:'Red Hat Text', sans-serif;
     margin-top:16px;
+}
+#footer-logo{
+    width:200px;
 }
 .footer-text{
     font-family:'Red Hat Text', sans-serif;
