--- a/finalproject/css/large.css
+++ b/finalproject/css/large.css
@@ -4,7 +4,8 @@
 
 nav ul#navbar{
 margin-right:0;
-margin-left:5em;
+/*margin-left:5em;*/
+padding-left:8em;
 }
 
 #header-logo{
@@ -91,7 +92,7 @@ border-width:1px 1px 1px 1px;
     min-width:60%;
 }
 #service-btn{
-    margin-top:80px;
+    margin-top:20px;
     margin-bottom:30px;
 }
 
