--- a/finalproject/css/small.css
+++ b/finalproject/css/small.css
@@ -11,11 +11,7 @@ p, strong{
     font-family: 'Kantumruy Pro', sans-serif;
     margin:5px;
     padding:5px;
-    font-size:16px;
-    
-}
-p{
-    /*opacity: 0.9;*/
+    font-size:16px;  
 }
 p, h2, h3, strong {
     margin-left:12px;
@@ -48,12 +44,11 @@ header{
     background-color:black;
     color:white;
     margin:auto;
-    display: flex;
-    flex-direction:row;
 	justify-content:center;
     position: fixed;
-    position: -webkit-sticky;
+    position:-webkit-sticky;
     top: 0;
+    
 }
 header.cbp-af-header-shrink{
     padding: 10px 0;
@@ -61,7 +56,7 @@ header.cbp-af-header-shrink{
 
 
 .header-grid{
-    width:100%;
+    width:90%;
     height:100%;
     display:grid;
     grid-template-columns:20% 80%;
@@ -77,6 +72,7 @@ header.cbp-af-header-shrink{
 nav{
     grid-column:2/2;
     z-index: 99999;
+  
 }
 #navbar{
     list-style-type:none;
@@ -84,6 +80,7 @@ nav{
     background-color:transparent;
     /*display:flex;*/
     /*float:left;*/
+    width:100%;
 }
 nav ul li a{
     display:block;
@@ -138,6 +135,12 @@ nav ul li a:hover{
     margin:auto;
     margin-top:80px;
 }
+#header-imgBROKEN{
+    max-width:100.5%;
+    min-width:100.5%;
+    margin:auto;
+    margin-top:80px;
+}
 .main-sec-1{
     grid-column:1/2;
     grid-row:1/2;
@@ -162,8 +165,11 @@ nav ul li a:hover{
    margin:auto;
    margin-top:50px;
    padding:10px;
+   text-align:center;
 }
-
+#localStorage{
+    text-align:center;
+}
 #main-sec-grid-1{
     max-width:125px;
     margin:auto;
@@ -196,11 +202,16 @@ nav ul li a:hover{
 .main-sec-2{
     grid-column:1/2;
     grid-row:3/4;
-    width:70%;
+    width:100%;
     margin:auto;
     margin-top:50px;
-    background-color:lightgray;
-    padding:10px;
+    background-color:#800000;
+    color:white;
+    padding:20px;
+}
+.main-sec-2 p, .main-sec-2 h2{
+    width:70%;
+    margin:auto;
 }
 
 .main-sec-3{
@@ -226,7 +237,6 @@ nav ul li a:hover{
 .main-sec-4{
     grid-column:1/2;
     grid-row:5/6;
-    background-color:lightgray; 
     width:70%;
     margin:auto; 
     margin-top: 50px;
@@ -244,11 +254,13 @@ nav ul li a:hover{
     width:70%;
     margin:auto;
     margin-top: 50px;
-    background-color:lightgray;
     padding:10px;
     display:grid;
     grid-template-columns:1fr 1fr;
     grid-template-rows:.1fr 1fr;
+    border-top: 5px solid black;
+    border-radius: 5px;
+    box-shadow: 0 0 10px gray;
 }
 .table-header{
     grid-column:1/3;
@@ -301,14 +313,15 @@ th{
     padding-top:50px;
     grid-column:1/2;
     grid-row:7/8;
-    width:100%;
-    margin:auto;
+    width:99%;
+    float:left;
+    
 }
 .table-img2{
     grid-column:1/2;
     grid-row:8/9;
-    width:100%;
-    margin:auto;
+    width:99%;
+  
 }
 /*.images-at-end{
     width:100%;
@@ -325,8 +338,7 @@ th{
     padding-bottom:20px;
     display:grid;
     grid-template-columns:1fr;
-    border-style: solid;
-    border-width:.1px .1px .1px .1px;
+
     padding:15px;
 }
 .service-1{
@@ -338,15 +350,14 @@ th{
     margin:auto;
     margin-top:50px;
     margin-bottom:20px;
+
 }
 .service-img{
     max-width:100%;
     min-width:100%;
     margin-top:10px;
     margin-bottom:20px;
-    border:solid;
-    border-width:4px;
-    border-color:#800000;
+    
 }
 #service-btn{
     margin:auto;
@@ -366,8 +377,7 @@ th{
     margin:auto;
     margin-bottom:20px;
     padding:15px;
-    border-style: solid;
-    border-width:.1px .1px .1px .1px;
+
 }
 
 
@@ -435,11 +445,10 @@ form label.sbs{
     margin:auto;
     margin-bottom:20px;
     padding:15px;
-    border-style: solid;
-    border-width:.1px .1px .1px .1px;
+
 }
 .gallery-image{
-    max-width:100%;
+    max-width:90%;
     margin:auto;
    
 }
@@ -451,7 +460,12 @@ form label.sbs{
     margin:auto;
     margin-bottom:40px;
     padding:5px;
+    border-top: 5px solid black;
+    border-radius: 5px;
+    box-shadow: 0 0 10px gray;
+    margin:5px;
 }
+
 .pictures{
     display:grid;
     grid-template-columns:1fr;
@@ -463,8 +477,7 @@ form label.sbs{
     margin:auto;
     margin-bottom:20px;
     padding:15px;
-    border-style: solid;
-    border-width:.1px .1px .1px .1px;
+
 }
 .field-area{
     grid-column:1/2;
@@ -479,8 +492,7 @@ form label.sbs{
     margin:auto;
     margin-bottom:20px;
     padding:15px;
-    border-style: solid;
-    border-width:.1px .1px .1px .1px;
+
 }
 
 /*REV..........................................................*/
@@ -489,8 +501,6 @@ form label.sbs{
     margin:auto;
     margin-bottom:20px;
     padding:15px;
-    border-style: solid;
-    border-width:.1px .1px .1px .1px;
     display:block;
 }
 .rev-img{
@@ -508,7 +518,9 @@ form label.sbs{
     margin:auto;
     margin-bottom:4em;
     color:white;
-
+    border-top: 5px solid #3f0000;
+    border-radius: 5px;
+    box-shadow: 0 0 10px gray;
 }
 .rev-1 h3{
     color:white;
@@ -518,7 +530,7 @@ form label.sbs{
     width:85%;
     margin-left:17px;
     height: 1px;
-    background-color: black;
+    background-color: #3f0000;
     border: none;
     
 }
