--- a/finalproject/css/large.css
+++ b/finalproject/css/large.css
@@ -37,7 +37,8 @@ padding-left:8em;
 }
 
 #main-sec-grid-3, #main-sec-grid-2{
-    font-size:30px;
+    font-size:20px;
+    text-align:left;
 }
 
 .main-sec-5{
